overflow fix

--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -14,6 +14,7 @@ body,
     background: black;
     font-family: 'Source Code Pro', monospace;
     color: white;
+    overflow: hidden;
 }
 
 * {
